--- a/new.css
+++ b/new.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
 body{
   scroll-behavior: smooth;
+  margin: 0;
 }
+/* *********************** header and navigation section *********************************/
 header{	
     width: 100%;	
     height: 150px;	
@@ -10,16 +12,15 @@ header{
     text-align: center;
     z-index: 8; 
     }
-/* header h1{
-    font-size: 2.8rem;
-    position: absolute;
-    left: 1rem;
-    top: -1.5rem;
-} */
+
 
 .welcome-message{
     text-align: center;
-    
+    /* position: relative;
+    top: 110px; */
+}
+.welcome-message h1{
+  text-align: center;
 }
 
 .foley-name{
@@ -28,6 +29,9 @@ header{
 .nav-div{
     float: right;
     
+}
+.burger-menu{
+  position: relative;
 }
 /* ****************************navigation links start**************************** */
 #menu {
@@ -57,14 +61,15 @@ header{
   /*Code below from an answer given to a question on the following site
   https://stackoverflow.com/questions/31140935/how-do-i-add-vertical-line-on-my-menu-item-in-html-css */
   
-  #menu li:not(:first-child):before {
+  /* #menu li:not(:first-child):before {
     content: "|      ";
     color: white;
-  }
+  } */
   
   #menu a.active {
     background-color: rgb(250, 249, 249);
     color: #05274b;
+    border-bottom: 2px solid white;
   }
   
   /* Dropdown menu */
@@ -124,7 +129,49 @@ header{
     display: inline-block;
   }
 /* *************** navigation links end ************* */
-
+/* *************** floating Navigation burger menu styles and positioning******************* */
+/* <!-- code below from question on w3schools on how to create a burger menu
+        https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar--> */
+        .topnav {
+          background-color: #05274b;
+          position: fixed;
+          right: 45px;
+          top: 63px;
+          z-index: 4;
+        }
+        
+        .topnav #myLinks {
+          display: none;
+        }
+        
+        .topnav a {
+          color: white;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+          display: block;
+        }
+        
+        .topnav a.icon {
+          background: #05274b;
+          display: block;
+          position: absolute;
+          right: 0;
+          top: -15px;
+          border: 2px solid white;
+        }
+        
+        .topnav a:hover {
+          background-color: #ddd;
+          color: rgb(0, 0, 0);
+        }
+        
+        .active {
+          background-color: #05274b;
+          color: white;
+        }
+        
+        /* *************************************** end of floating navigation burger menu ******************************* */
 
 
 
@@ -162,8 +209,12 @@ header{
 /* @media screen and (min-width: 768px){ */
   body{
   padding: 0;
+  margin: 0;
   }
-
+  .welcome-message{
+    text-align: center;
+    
+     }
   header{
   width: 100%;
   height: 100px;
@@ -174,39 +225,41 @@ header{
   font-family: Hina Mincho, sans-serif;
   }
   .hero-section{
-    text-align: center;
+    height: 626px;
   }  
-  .hero-section-inner hr{
-  width: 100%;
-  height: 5px;
-  background-color: white;
-  }
+  
   header h1{
   color: white;
   font-size: 50px;
   font-family: Hina Mincho, sans-serif;
   
   }
-  header h2{  
+  /* header h2{  
   top: 13%;
   right: 2.5%;
   color: white;
 
-  }
+  } */
   .hero-section-inner{
   width: 100%;
-  height: 693px;
+  height: 783px;
   background-color: #757575;
-  position: relative;
+  /* position: relative; 
+  top: -56px;
+  bottom: 5px; */
   }
+  
+  
+  
+ 
   .hero-section-inner h1{
   font-size: 60px;
   color: white;
-  margin: 0;
+  margin-top: 0;
   }
   .hero-section-inner p{  
-  top: 127px;
-  left: 521px;
+  /* top: 127px;
+  left: 521px; */
   font-size: 30px;
   color: white;
   }
@@ -280,7 +333,7 @@ header{
   .section1-inner {
   width: 100%;
   height: 500px;
-  background-color: #251e19;
+  background-color: #209481;
   box-sizing: borderbox;
   position: relative;
   }
@@ -397,13 +450,24 @@ header{
     header h2{  
     font-size: 15px;    
     text-align: center; 
-    }   
+    }  
+    .topnav a.icon {
+      background: #05274b;
+      display: block;
+      position: absolute;
+      right: -30px;
+      top: -50px;
+      border: 2px solid lime;
+    }
+  
+  
+   
     .hero-section-inner{ 
-    height: 88px;  
+    height: 126px; 
+    position: static; 
     }   
     .hero-section-inner h1{     
-    font-size: 39px;    
-    
+    font-size: 39px; 
     text-align: center; 
     }   
     .hero-section-inner p{      
